added mdl styling to button

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <html>
     <body>
         todo: <input id="text" type="text" placeholder="enter todo">
-        <button id="add">add</button>
+        <button id="add" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">add</button>
         <div id="container">
         </div>
         <button id="del">delete todos</button>
