--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <button id="add" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">add</button>
         <div id="container">
         </div>
-        <button id="del">delete todos</button>
+        <button id="del" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">delete todos</button>
     </body>
 </html>
     
