added margin to buttons

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <html>
     <body>
         todo: <input id="text" type="text" placeholder="enter todo">
-        <button id="add" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">add</button>
+        <button id="add" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent btn">add</button>
         <div id="container">
         </div>
-        <button id="del" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">delete todos</button>
+        <button id="del" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent btn">delete todos</button>
     </body>
 </html>
     
@@ -49,8 +49,7 @@
 </script>
 
 <style>
-    button {
-        margin: .5em;
-        padding: 0 4px;
+    body .btn {
+        margin: 4px 8px;
     }
 </style>
