--- a/index.html
+++ b/index.html
@@ -17,33 +17,35 @@
 </html>
     
 <script>
-    const add = document.getElementById("add");
-    add.addEventListener("click", () => {
-        const text = document.getElementById("text");
-        const container = document.getElementById("container");
-        const newTodo = document.createElement("div");
-        newTodo.innerHTML = `
-        <input type="checkbox">
-        <span>${text.value}</span>`;
-        container.appendChild(newTodo);
-        text.value = "";
-        const done = newTodo.querySelector("input");    //the checkbox
-        let toggle = true;
-        done.addEventListener("click", () => {
-            if (toggle) {
-                newTodo.querySelector("span").style = "text-decoration: line-through";
-                newTodo.id = "checked";
-                toggle = !toggle;
-            } else {
-                newTodo.querySelector("span").style = "";
-                newTodo.id = "";
-                toggle = !toggle;
-            }
-        });
-        const del = document.getElementById("del");
-        del.addEventListener("click", () => {
-            const checked = document.querySelector("#checked");
-            container.removeChild(checked);
+    document.addEventListener('DOMContentLoaded', () => {
+        const add = document.getElementById("add");
+        add.addEventListener("click", () => {
+            const text = document.getElementById("text");
+            const container = document.getElementById("container");
+            const newTodo = document.createElement("div");
+            newTodo.innerHTML = `
+            <input type="checkbox">
+            <span>${text.value}</span>`;
+            container.appendChild(newTodo);
+            text.value = "";
+            const done = newTodo.querySelector("input");    //the checkbox
+            let toggle = true;
+            done.addEventListener("click", () => {
+                if (toggle) {
+                    newTodo.querySelector("span").style = "text-decoration: line-through";
+                    newTodo.id = "checked";
+                    toggle = !toggle;
+                } else {
+                    newTodo.querySelector("span").style = "";
+                    newTodo.id = "";
+                    toggle = !toggle;
+                }
+            });
+            const del = document.getElementById("del");
+            del.addEventListener("click", () => {
+                const checked = document.querySelector("#checked");
+                container.removeChild(checked);
+            });
         });
     });
 </script>
