--- a/index.html
+++ b/index.html
@@ -8,11 +8,29 @@
 </head>
 <html>
     <body>
-        todo: <input id="text" type="text" placeholder="enter todo">
-        <button id="add" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent btn">add</button>
-        <div id="container">
-        </div>
-        <button id="del" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent btn">delete todos</button>
+        <div class="demo-card-wide mdl-card mdl-shadow--2dp">
+            <div class="mdl-card__title">
+              <h2 class="mdl-card__title-text">Todo List</h2>
+            </div>
+            <div class="mdl-card__supporting-text">
+                todo: <input id="text" type="text" placeholder="enter todo">
+                <button id="add" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent btn">add</button>
+                <div id="container">
+                </div>
+                <button id="del" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent btn">delete todos</button>
+            </div>
+            <div class="mdl-card__actions mdl-card--border">
+              <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+                Back to my projects
+              </a>
+            </div>
+            <div class="mdl-card__menu">
+              <button class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect">
+                <i class="material-icons">share</i>
+              </button>
+            </div>
+          </div>
+        
     </body>
 </html>
     
@@ -53,5 +71,23 @@
 <style>
     body .btn {
         margin: 4px 8px;
+    }
+
+    .demo-card-wide.mdl-card {
+        width: 60%;
+    }
+    .demo-card-wide > .mdl-card__title {
+    color: #fff;
+    height: 176px;
+    background: url('https://getmdl.io/assets/demos/welcome_card.jpg') center / cover;
+    }
+    .demo-card-wide > .mdl-card__menu {
+    color: #fff;
+    }
+
+    body {
+    padding: 20px;
+    background: #fafafa;
+    position: relative;
     }
 </style>
