--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <html>
     <body>
-        <div class="demo-card-wide mdl-card mdl-shadow--2dp">
+        <div class="demo-card-wide mdl-card mdl-shadow--2dp centered">
             <div class="mdl-card__title">
               <h2 class="mdl-card__title-text">Todo List</h2>
             </div>
@@ -74,7 +74,7 @@
     }
 
     .demo-card-wide.mdl-card {
-        width: 60%;
+        width: 80%;
     }
     .demo-card-wide > .mdl-card__title {
     color: #fff;
@@ -89,5 +89,9 @@
     padding: 20px;
     background: #fafafa;
     position: relative;
+    }
+
+    .centered {
+        margin: auto;
     }
 </style>
