--- a/index.html
+++ b/index.html
@@ -16,10 +16,6 @@
                 todo: <input id="text" type="text" placeholder="enter todo">
                 <button id="add" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent btn">add</button>
                 <ul id="container" class="demo-list-control mdl-list">
-                </ul>
-                <button id="del" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent btn">delete todos</button>
-
-                <ul class="demo-list-control mdl-list">
                     <li class="mdl-list__item">
                       <span class="mdl-list__item-primary-content">
                         Bryan Cranston
@@ -41,8 +37,8 @@
                         </label>
                       </span>
                     </li>
-                    
-                  </ul>
+                </ul>
+                <button id="del" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent btn">delete todos</button>
             </div>
             <div class="mdl-card__actions mdl-card--border">
               <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
@@ -68,11 +64,12 @@
             const container = document.getElementById("container")
             const newTodo = document.createElement("li")
             const todoContent = document.createElement('span')
-            const doneWrapWrap = document.createElement('div')
+            const doneWrapWrap = document.createElement('span')
             const doneWrap = document.createElement('label')
             const done = document.createElement('input')
             newTodo.className = "mdl-list__item"
             todoContent.className = "mdl-list__item-primary-content"
+            todoContent.id = "content"
             doneWrapWrap.className = "mdl-list__item-secondary-action"
             doneWrap.className = "mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect"
             doneWrap.for = `list-checkbox-${i}`
@@ -80,7 +77,7 @@
             done.id = `list-checkbox-${i}`
             done.className = "mdl-checkbox__input"
             todoContent.innerText = text.value
-            componentHandler.upgradeElement(doneWrap)
+            // componentHandler.upgradeElement(doneWrap)
             componentHandler.upgradeElement(newTodo)
             componentHandler.upgradeElement(todoContent)
             componentHandler.upgradeElement(doneWrapWrap)
@@ -94,7 +91,7 @@
             let toggle = true;
             done.addEventListener("click", () => {
                 if (toggle) {
-                    newTodo.querySelector("span").style = "text-decoration: line-through";
+                    newTodo.querySelector("#content").style = "text-decoration: line-through";
                     newTodo.id = "checked";
                     toggle = !toggle;
                 } else {
