--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                         Shop
                       </span>
                       <span class="mdl-list__item-secondary-action">
-                        <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" >
-                          <input type="checkbox"  class="mdl-checkbox__input" />
+                        <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="list-checkbox-0">
+                          <input type="checkbox"  class="mdl-checkbox__input" id="list-checkbox-0"/>
                         </label>
                       </span>
                     </li>
@@ -32,8 +32,8 @@
                         take out trash
                       </span>
                       <span class="mdl-list__item-secondary-action">
-                        <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" >
-                          <input type="checkbox"  class="mdl-checkbox__input" />
+                        <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="list-checkbox-999">
+                          <input type="checkbox"  class="mdl-checkbox__input" id="list-checkbox-999"/>
                         </label>
                       </span>
                     </li>
@@ -98,15 +98,15 @@
             done.id = `list-checkbox-${i}`
             done.className = "mdl-checkbox__input"
             todoContent.innerText = text.value
-            // componentHandler.upgradeElement(doneWrap)
-            componentHandler.upgradeElement(newTodo)
-            componentHandler.upgradeElement(todoContent)
-            componentHandler.upgradeElement(doneWrapWrap)
-            componentHandler.upgradeElement(done)
             doneWrap.appendChild(done)
             doneWrapWrap.appendChild(doneWrap)
             newTodo.appendChild(todoContent)
             newTodo.appendChild(doneWrapWrap)
+            componentHandler.upgradeElement(newTodo)
+            componentHandler.upgradeElement(todoContent)
+            componentHandler.upgradeElement(doneWrapWrap)
+            componentHandler.upgradeElement(doneWrap)
+            componentHandler.upgradeElement(done)
             container.appendChild(newTodo)
             text.value = ""
             scanBoxes()
