commented out broken keydown listener

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         }
         
         add.addEventListener("click", addItem())
-        text.addEventListener("keydown", event => event.key === 'Enter' && addItem())
+        // text.addEventListener("keydown", event => event.key === 'Enter' && addItem())
     })
 </script>
 
