--- a/index.html
+++ b/index.html
@@ -40,32 +40,34 @@
 
 <style>
     body .btn {
-        margin: 4px 8px;
+      margin: 4px 8px;
     }
 
     .demo-card-wide.mdl-card {
-        width: 80%;
+      width: auto;
     }
+
     .demo-card-wide > .mdl-card__title {
-    color: #fff;
-    height: 176px;
-    background: url('https://getmdl.io/assets/demos/welcome_card.jpg') center / cover;
+      color: #fff;
+      height: 176px;
+      background: url('https://getmdl.io/assets/demos/welcome_card.jpg') center / cover;
     }
+
     .demo-card-wide > .mdl-card__menu {
-    color: #fff;
+      color: #fff;
     }
 
     body {
-    padding: 20px;
-    background: #fafafa;
-    position: relative;
+      padding: 20px;
+      background: #fafafa;
+      position: relative;
     }
 
     .centered {
-        margin: auto;
+      margin: auto;
     }
 
     .demo-list-control {
-        width: 350px;
+      width: 350px;
     }
 </style>
